tests/Spire.Analyzers.Tests/SPIRE002/cases/Detect_EmptyBody_RefStruct.cs
//@ should_fail
// Ensure that SPIRE002 IS triggered when [MustBeInit] is applied to a ref struct with an empty body.
[MustBeInit] //~ ERROR
public ref struct EmptyRefStruct { }
